[gd_scene load_steps=7 format=3 uid="uid://brstj8qlf7jmx"]

[ext_resource type="Script" uid="uid://dx0jigob835ay" path="res://src/ui.gd" id="1_gdt2y"]
[ext_resource type="Texture2D" uid="uid://t2na6m61awv5" path="res://textures/submarine_ui.png" id="1_yev5y"]
[ext_resource type="Texture2D" uid="uid://bpr8ev3pnm2y7" path="res://textures/Orb_purple.png" id="2_gdt2y"]
[ext_resource type="Texture2D" uid="uid://b4wydytou5tgx" path="res://textures/Orb_redWhite.png" id="3_wm3ai"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4jx1"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_bottom = 30.0
bg_color = Color(0, 0, 0, 0.196078)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yev5y"]
bg_color = Color(0.257322, 0.645293, 0.834618, 1)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdt2y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 648.0
offset_right = 108.0
offset_bottom = 648.0
grow_vertical = 2
scale = Vector2(1, -1)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 150

[node name="ProgressBar" type="VSlider" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/center_grabber = -1
theme_override_icons/grabber_disabled = ExtResource("1_yev5y")
theme_override_styles/slider = SubResource("StyleBoxFlat_x4jx1")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_yev5y")
rounded = true
editable = false
scrollable = false

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="RocketOrbIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_gdt2y")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/RocketOrbIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/RocketOrbIcon/MarginContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LaserOrbIcon" type="TextureRect" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wm3ai")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/LaserOrbIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/LaserOrbIcon/MarginContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
